Fix `<ButtonGroup>` border collapse issue

--- a/packages/core/src/components/ButtonGroup/ButtonGroup.module.scss
+++ b/packages/core/src/components/ButtonGroup/ButtonGroup.module.scss
@@ -13,21 +13,46 @@
   display: flex;
   align-items: center;
   justify-content: center;
-}
 
-.buttonsContainer .button {
-  border: 1px solid;
-  background-color: var(--primary-background-color);
-  border-color: var(--ui-border-color);
-}
+  .button {
+    border-style: solid;
+    border-top-width: 1px;
+    border-left-width: 0;
+    border-right-width: 0;
+    border-bottom-width: 1px;
+    background-color: var(--primary-background-color);
+    border-color: var(--ui-border-color);
 
-.buttonsContainer .button.activeButton {
-  background-color: var(--primary-selected-color);
-  border-color: var(--primary-color);
-}
+    &:first-of-type {
+      border-left-width: 1px;
+    }
 
-.buttonsContainer .button.activeButton:hover {
-  background-color: var(--primary-selected-color);
+    &:last-of-type {
+      border-right-width: 1px;
+    }
+
+    &.activeButton {
+      background-color: var(--primary-selected-color);
+      border-color: var(--primary-color);
+      border-left-width: 1px;
+      border-right-width: 1px;
+
+      &:hover {
+        background-color: var(--primary-selected-color);
+      }
+    }
+
+    &.disabled,
+    &.buttonDisabled {
+      background-color: var(--disabled-background-color);
+      opacity: 0.5;
+      cursor: not-allowed;
+    }
+  }
+
+  .button:not(.activeButton) + .button {
+    border-left-width: 1px;
+  }
 }
 
 .optionText:not(.disabled) {
@@ -38,27 +63,17 @@
   color: var(--primary-text-color);
 }
 
-.kindTertiary .button {
-  border-color: transparent;
-}
+.kindTertiary {
+  .button {
+    border-color: transparent;
 
-.kindTertiary .button:first-child {
-  border-color: transparent;
+    &:first-child {
+      border-color: transparent;
+    }
+  }
 }
 
 .wrapper.disabled {
-  cursor: not-allowed;
-}
-
-.button.disabled {
-  cursor: not-allowed;
-  background-color: var(--disabled-background-color);
-  opacity: 0.5;
-}
-
-.button.buttonDisabled {
-  background-color: var(--disabled-background-color);
-  opacity: 0.5;
   cursor: not-allowed;
 }
 
